--- a/styles/main.css
+++ b/styles/main.css
@@ -9,9 +9,6 @@
     padding: 0;
 }
 
-body {
-    max-width: 1440px;
-}
 
 a:hover {
     color: hsl(178, 100%, 50%);
@@ -33,8 +30,10 @@ a:hover {
     justify-content: center;
     align-items: center;
     background-color: hsl(217, 54%, 11%);
-    padding-top: 8rem;
-    padding-bottom: 8rem;
+    width: 100vw;
+    height: 100vh;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     padding-left: 1rem;
     padding-right: 1rem;
 }
