--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ a:hover {
     width: 100%;
     height: 272px;
     background-color: hsla(178, 100%, 50%, 0.5);
-    transition: all 0.2s ease-out;
+    transition: all 0.3s ease-out;
 }
 .img__overlay:hover {
     opacity: 1;
@@ -93,23 +93,24 @@ a:hover {
 .header__link {
     font-size: 1.5rem;
     color: hsl(0, 0%, 100%);
-	margin-top: 1rem;
-	margin-bottom: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     font-weight: initial;
     text-shadow: 0 0 1rem hsla(0, 0%, 0%, 0.5);
     text-decoration: none; 
+    transition: all 0.3s ease-out;
 }
 
 .card__text {
-	font-size: 16px;
-	color: hsl(215, 51%, 70%);
+    font-size: 16px;
+    color: hsl(215, 51%, 70%);
     font-weight: lighter;
     text-shadow: 0 0 1rem hsla(0, 0%, 0%, 0.5);
 }
 
 .offer {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 #ether {
@@ -124,8 +125,8 @@ a:hover {
 }
 
 .price {
-	color: hsl(178, 100%, 50%);
-	margin-top: 1rem;
+    color: hsl(178, 100%, 50%);
+    margin-top: 1rem;
     text-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
 }
 
@@ -139,8 +140,8 @@ a:hover {
 }
 
 .time-left {
-	color: hsl(215, 51%, 70%);
-	margin-top: 1rem;
+    color: hsl(215, 51%, 70%);
+    margin-top: 1rem;
     text-shadow: 0 0 1rem hsla(0, 0%, 0%, 0.5);
 }
 
@@ -175,4 +176,6 @@ a:hover {
 .creator__name {
     color: hsl(0, 0%, 100%);
     text-decoration: none;
+    transition: all 0.3s ease-out;
+}
 }
